[package]
name = "qq_cli"
version = "0.1.0"
authors = ["Moviendome <estoy@moviendo.me>"]
edition = "2021"

[[bin]]
name = "qq"
path = "src/main.rs"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bunt = "0.2.8"
clap = "3.0"
inquire = "0.7.5"

[dev-dependencies]
tempfile = "3.2.0"
