[package]
name = "qq_cli"
version = "0.3.0"
authors = ["Moviendome <estoy@moviendo.me>"]
edition = "2021"

[[bin]]
name = "qq"
path = "src/main.rs"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = "3.0"
inquire = "0.7.5"

[dev-dependencies]
tempfile = "3.2.0"
