[package]
name = "qq_cli"
version = "0.4.0"
authors = ["Moviendome <estoy@moviendo.me>"]
edition = "2021"

[[bin]]
name = "qq"
path = "src/main.rs"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = "3.0"
inquire = "0.7.5"
serde = { version = "1", features = ["derive"] }
toml = "0.8"
include_dir = "0.7"

[dev-dependencies]
tempfile = "3.2.0"
